lib/flux/apps/home/zigbee2mqtt/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zigbee2mqtt
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: zigbee2mqtt
    app.kubernetes.io/instance: zigbee2mqtt
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
